# QLawCPP

./: CMakeLists.txt  Qlaw_control_laws.m  README.md  options.txt  qlaw_output.txt  qplotter.asv  qplotter.m
examples/GTO-GEO/: options.txt  parameters.txt
examples/LEO-GEO/: parameters.txt
examples/LEO-Molniya/: earth_sphere.m  parameters.txt
examples/Polar transfer/: parameters.txt  qplotter.m
src/: CMakeLists.txt  main.cpp
src/qlaw/: CMakeLists.txt  adaptive_step_rk8713M.cpp  convergence.cpp  effectivity.cpp  gaussvar.cpp  lyapunov.cpp  minQdot.cpp  parse_options.cpp  qlaw.h
